# ckanext-superset

./: CHANGELOG.md  MANIFEST.in  README.md  conftest.py  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  test.ini
.github/workflows/: test-2.10.yml  test-2.11.yml  test-superset-extension.yml
ckanext/superset/: cli.py  config.py  connect.py  decorators.py  exceptions.py  plugin.py
ckanext/superset/actions/: superset_database.py  superset_dataset.py
ckanext/superset/assets/: script.js  webassets.yml
ckanext/superset/assets/css/: superset.css
ckanext/superset/assets/js/: superset.js
ckanext/superset/auth/: superset_database.py  superset_dataset.py
ckanext/superset/blueprints/: images.py  superset.py
ckanext/superset/data/: chart.py  dataset.py  main.py  sync.py
ckanext/superset/data/samples/: chart.dashboards.json_metadata.json  chart.json  chart.params.json  chart.query_context.json  charts.json  dataset.json  datasets.json
ckanext/superset/i18n/: ckanext-superset.pot
ckanext/superset/i18n/es/LC_MESSAGES/: ckanext-superset.mo  ckanext-superset.po
ckanext/superset/migration/superset/: alembic.ini
ckanext/superset/templates/: base.html  superset.html
ckanext/superset/templates/admin/: base.html
ckanext/superset/templates/package/: read_base.html
ckanext/superset/templates/snippets/activities/: superset_sync_failed.html
ckanext/superset/templates/superset/: create-dataset.html  databases_list.html  index.html  list-datasets.html  sync-settings.html
ckanext/superset/tests/: conftest.py  factories.py  fixtures.py  helpers.py  test_plugin.py  test_superset_tab.py  test_sync.py
ckanext/superset/tests/responses/: chart.json  chart_32.json  databases.json
ckanext/superset/utils/: __init__.py  dataset.py
