# This file should only contain setuptools related configuration to build the
# extension (i.e. arguments to setup() in setup.py). Add any other project
# information should go to pyproject.toml instead.
#
# TODO: migrate Babel options to pyproject.toml when it's better supported


[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/superset/i18n/ckanext-superset.pot
width = 80

[init_catalog]
domain = ckanext-superset
input_file = ckanext/superset/i18n/ckanext-superset.pot
output_dir = ckanext/superset/i18n

[update_catalog]
domain = ckanext-superset
input_file = ckanext/superset/i18n/ckanext-superset.pot
output_dir = ckanext/superset/i18n
previous = true

[compile_catalog]
domain = ckanext-superset
directory = ckanext/superset/i18n
statistics = true
